# metrinomicon

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  rustfmt.toml
backend/src/: main.rs
backend/src/db/: connection.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/ops/: auth.rs  mod.rs  requests.rs  stats.rs  uptime.rs  utils.rs  websocket.rs
backend/src/routes/: auth.rs  mod.rs  requests.rs  uptime.rs
frontend/: Dockerfile  Makefile  eslint.config.js  package.json  prettier.config.js  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/requests/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/atoms/: dashboard.tsx  requests.tsx
frontend/src/components/: styles.ts  util.tsx
frontend/src/components/pages/: sidebar.tsx  signinForm.tsx  useLogsSocket.tsx
frontend/src/components/pages/dashboard/: reliability.tsx  serviceLevelIndicators.tsx  util.tsx
frontend/src/components/shared/: buttonGroup.tsx  divider.tsx  dropdown.tsx  emptyCase.tsx  pill.tsx  skeleton.tsx  skeletonWrapper.tsx  spinner.tsx
frontend/src/context/: session.tsx
frontend/src/context/api/: context.tsx  params.d.ts  queries.tsx  requests.tsx
frontend/src/css/: calendar.css  globals.css  timeField.css
frontend/src/enums/: api.ts  requests.ts  uptime.ts
frontend/src/hooks/: useClickOutside.tsx
frontend/src/interfaces/: api.d.ts  logs.d.ts  queries.d.ts  uptime.d.ts
(+17 files in other folders)
