[package]
name = "metrinomicon"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["openssl"] }
openssl = { version = "0.10.68", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
actix-ws = "0.3.0"
bytestring = "1.4.0"
actix-http = "3.9.0"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0.93"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.0"
bcrypt = "0.17.0"
uuid = { version = "1.13.1", features = ["v4"] }
sha2 = "0.10.8"
strum = { version = "^0.26.0", features = ["derive"] }
actix = "0.13.5"
awc = "3.5.1"
log = "0.4.25"
env_logger = "0.11.6"
actix-web-httpauth = "0.8.2"
clap = { version = "4.5.30", features = ["derive"] }
